# search-deflector

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.rtf  build.py  build.sh  deflect.d  deflector.d  deflector.go  engines.txt  go.mod  go.sum  helpers.d  installer.iss  installer.txt  main.d  setup.d  updater.d
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: title.ai
assets/source/: logo.ai  wizard.ai
egui-ext/: Cargo.toml
icons/: icon.pdn
installer/: installer.iss  updatetask.xml
lang/: de-DE.txt  en-us.txt  en_us.txt  es-ES.txt  hr-HR.txt  it-IT.txt  zh-CN.txt  zh-HK.txt
libs/: engines.txt  issue.txt  libcurl.txt
pack/: appxmanifest.xml  installer.iss  message.txt
pkg/: registry.go  registry_test.go
source/: _setup.d  common.d  configure.d  deflect.d  deflector.d  launcher.d  locale.d  main.d  setup.d  updater.d
src/: lib.rs
