[package]
name = "search-deflector"
version = "2.0.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
description = "A tiny program to redirect your start menu web searches to the browser and search engine you choose."
documentation = "https://github.com/spikespaz/search-deflector/wiki"
readme = "README.md"
repository = "https://github.com/spikespaz/search-deflector"
license = "MIT"
edition = "2021"
publish = false
default-run = "configure"

[dependencies]
winapi = "0.3.9"
winreg = "0.10"
eframe = "0.15.0"
serde = { version = "1", features = ["derive"], optional = true }

[workspace]
