[package]
name = "search-deflector"
version = "2.0.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
description = "A tiny program to redirect your start menu web searches to the browser and search engine you choose."
documentation = "https://github.com/spikespaz/search-deflector/wiki"
readme = "README.md"
repository = "https://github.com/spikespaz/search-deflector"
license = "MIT"
edition = "2021"
publish = false
default-run = "nwg_configure"

[dependencies]
winapi = "0.3.9"
winreg = "0.10"
# eframe = "0.15.0"
iui = "0.3"
native-windows-gui = { version = "1.0.12", features = ["high-dpi"] }
serde = { version = "1", features = ["derive"], optional = true }

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[target.aarch64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[workspace]
