[package]
name = "egui-ext"
version = "0.1.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
description = "A simple collection of extensions for egui."
readme = "README.md"
repository = "https://github.com/spikespaz/egui-ext"
license = "MIT"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
